Test fix for code markdown whitespace wrapping

--- a/styles/global.css
+++ b/styles/global.css
@@ -49,6 +49,10 @@ body {
   text-decoration: underline;
 }
 
+.Text--markdown pre {
+  white-space: pre-wrap;
+}
+
 .Text--white {
   color: #fff;
 }
